<resources>
    <string name="app_name">BMI and BMR</string>
    <string name="app_select">Select the option you want to calculate</string>

    /* BMI */
    <string name="bmi">BMI</string>
    <string name="age">Age</string>
    <string name="select_gender">Select gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="calculate">Calculate</string>
    <string name="normal_weight">Normal weight</string>
    <string name="overweight">Overweight</string>
    <string name="grade_1_obesity">Grade 1 obesity</string>
    <string name="grade_2_obesity">Grade 2 obesity</string>
    <string name="values_out_of_reality">Values out of reality</string>
    <string name="invalid_data">Invalid data</string>

    /* BMR */
    <string name="bmr">BMR</string>
    <string name="pal">Physical activity level</string>
    <string name="light">Light</string>
    <string name="moderate">Moderate</string>
    <string name="intense">Intense</string>
</resources>