<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMR">

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="670dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textMainLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/bmr"
            android:textAlignment="center"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/editAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/height"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/weight"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <RadioGroup
            android:id="@+id/editGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_gender"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/editPal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pal"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButtonLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/light" />

            <RadioButton
                android:id="@+id/radioButtonModerate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moderate" />

            <RadioButton
                android:id="@+id/radioButtonIntense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intense" />

        </RadioGroup>

        <Button
            android:id="@+id/btnCalc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>